crates/svm-sdk-tests/tests/storage/invalid_field.stderr
error: Invalid `#[storage]` field type: String
 --> $DIR/invalid_field.rs:3:1
  |
3 | #[app]
  | ^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
