crates/svm-sdk-tests/tests/storage/invalid_field.rs
use svm_sdk::app;

#[app]
mod App {
    #[storage]
    struct Storage {
        name: String,
    }
}

fn main() {}
